--- a/trello_scrum/scrum/templates/scrum/index.html
+++ b/trello_scrum/scrum/templates/scrum/index.html
@@ -1,11 +1,27 @@
 <h1> {{ board_name }} </h1>
 
-{% if total_points_dict %}
-    <ul>
-    {% for key, value in total_points_dict.items %}
-        <li><a href="/scrum/etapa/{{ key }}/"><b>Lista {{ key }}</b></a> tiene un total de {{ value }} story points</li>
-    {% endfor %}
-    </ul>
+
+{% if employees %}
+    <h2>
+        <table>
+            <tr>
+                <th> [ Employees ] </th>
+                {% for name in lists_names %}
+                
+                    <th> [ {{ name }} ] </th>
+                    
+                {% endfor %}
+            </tr>
+            {% for employee in employees %}        
+                <tr>
+                    <td>{{ employee.full_name }}</td>
+                    {% for lst_name in lists_names %}
+                        <td>{{ employee.points.lst_name }}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </table>
+    </h2>
 {% else %}
-    <p>No cards where found in this board</p>
+    <p>No employees where found in this board</p>
 {% endif %}
